--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,12 +20,10 @@ jobs:
   build:
     strategy:
       matrix:
-        tools: [PolySpace_BF_dummy, WinAMS_dummy]
+        tools: [ubuntu, macos, windows]
     # The type of runner that the job will run on
     runs-on:
-      - self-hosted
-      - EC2
-      - NonProd
+      - x86
       - ${{ matrix.tools }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
